--- a/meu_portfolio/pubspec.yaml
+++ b/meu_portfolio/pubspec.yaml
@@ -51,16 +51,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/rapha.jpeg
+    - assets/html.png
+    - assets/css.png
+    - assets/js.png
+    - assets/java.png
+    - assets/python.png
+    - assets/c++.png
+    - assets/csharp.png
+    - assets/figma.png
+    - assets/canva.png
+    - assets/krita.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
