--- a/farmacia_app/pubspec.yaml
+++ b/farmacia_app/pubspec.yaml
@@ -1,37 +1,23 @@
 name: farmacia_app
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.10.1
+  sdk: ">=3.10.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^1.0.7
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-  # ➕ ADICIONADO PARA GERENCIAMENTO DE ESTADO
-  provider: ^6.1.2
-
-  # ➕ ADICIONADO PARA FORMATAR DATAS NOS AGENDAMENTOS
+  provider: ^6.1.5+1
   intl: ^0.19.0
+  image_picker: ^1.1.0 # usado para carregar receitas (web/Android/iOS)
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-
-  # assets:
-  #   - images/
