--- a/farmacia_app/pubspec.yaml
+++ b/farmacia_app/pubspec.yaml
@@ -14,6 +14,12 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.0 # usado para carregar receitas (web/Android/iOS)
 
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.0
+  # firebase_storage: ^12.3.0   
+ 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
